# dot-matrix-tool

./: Backend.h  CMakeLists.txt  DMInputNumber.qml  DMNewDialog.qml  DMScreen.qml  DMSelect.qml  DMSelectColor.qml  DotItem.qml  Main.qml  README.md  main.cpp  qml.qrc  settings.h  sqlitedb.cpp  sqlitedb.h  usersettings.cpp  usersettings.h
qml/: DMButton.qml  DMInput.qml  DMInputNumber.qml  DMScreen.qml  DMSelect.qml  Main.qml
windeployqt/: windows.ps1
